Regression: Sculpt mode: Sculpting with dyntopo crashes blender #106029

Closed
opened 2023-03-23 11:53:19 +01:00 by Andy Goralczyk · 3 comments
Member

System Information
Operating system: Linux-6.0.12-76060006-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro RTX 8000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-23 08:55, hash: b77e6aaa0f49
Worked: commit date: 2023-03-20 07:31, hash: b5584c1cb5340

Short description of error
Sculpting on any object that has dyntopo enabled crashes blender instantly.

Exact steps for others to reproduce the error
Add a cube, go to sculpt mode. Enable dyntopo and drag your mouse across the cube. It should crash instantly. Even just pressing F to scale the brush size crashes.

Here is my backtrace from a debug build:

#0  pbvh_draw_args_init(PBVH*, PBVH_GPU_Args*, PBVHNode*)
    (pbvh=0x7fffa5c0f408, args=0x7fffffffc0e0, node=0x7fffa5c46008)
    at /media/data/blender_guest/blender_main/source/blender/blenkernel/intern/pbvh.cc:691
#1  0x0000000000a85a45 in pbvh_update_draw_buffer_cb(void * __restrict__, int, const TaskParallelTLS * __restrict__) (userdata=0x7fffffffc320, n=0)
    at /media/data/blender_guest/blender_main/source/blender/blenkernel/intern/pbvh.cc:1666
#2  0x000000000d01f4fc in BLI_task_parallel_range(int, int, void*, TaskParallelRangeFunc, TaskParallelSettings const*)
    (start=0, stop=1, userdata=0x7fffffffc320, func=0xa85982 <pbvh_update_draw_buffer_cb(void * __restrict__, int, const TaskParallelTLS * __restrict__)>, settings=0x7fffffffc360)
    at /media/data/blender_guest/blender_main/source/blender/blenlib/intern/task_range.cc:128
#3  0x0000000000a85dd8 in pbvh_update_draw_buffers(PBVH*, PBVHNode**, int, int)
    (pbvh=0x7fffa5c0f408, nodes=0x7fffae11ab08, totnode=1, update_flag=528)
    at /media/data/blender_guest/blender_main/source/blender/blenkernel/intern/pbvh.cc:1736
#4  0x0000000000a8a3ec in BKE_pbvh_draw_cb(PBVH*, bool, PBVHFrustumPlanes*, PBVHFrustumPlanes*, void (*)(void*, PBVHBatches*, PBVH_GPU_Args*), void*, bool, PBVHAttrReq*, int)
    (pbvh=0x7fffa5c0f408, update_only_visible=false, update_frustum=0x7fffffffc710, draw_frustum=0x7fffffff
    c720, draw_fn=0x176e8fa <sculpt_draw_cb(DRWSculptCallbackData*, PBVHBatches*, PBVH_GPU_Args*)>, user_data=0x7fffffffc860, attrs=0x7fffffffcd70, attrs_num=2)
    at /media/data/blender_guest/blender_main/source/blender/blenkernel/intern/pbvh.cc:3154
#5  0x000000000176f04f in drw_sculpt_generate_calls(DRWSculptCallbackData*) (scd=0x7fffffffc860)
    at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager_data.cc:1356
#6  0x000000000176f98b in DRW_shgroup_call_sculpt_with_materials(DRWShadingGroup**, GPUMaterial**, int, Object*) (shgroups=0x7fffffffd260, gpumats=0x0, num_shgroups=1, ob=0x7fffae144e08)
    at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager_data.cc:1512
#7  0x000000000182590c in workbench_cache_sculpt_populate
    (wpd=0x7fffad863408, ob=0x7fffae144e08, color_type=V3D_SHADING_MATERIAL_COLOR)
    at /media/data/blender_guest/blender_main/source/blender/draw/engines/workbench/workbench_engine.c:119
#8  0x0000000001826872 in workbench_cache_populate (ved=0x7fffaf37ea68, ob=0x7fffae144e08)
    at /media/data/blender_guest/blender_main/source/blender/draw/engines/workbench/workbench_engine.c:428
#9  0x0000000001764c77 in drw_engines_cache_populate (ob=0x7fffae144e08)
    at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager.c:1077
#10 0x0000000001766929 in DRW_draw_render_loop_ex
    (depsgraph=0x7fffaefd4108, engine_type=0x7fffaeb1b948, region=0x7fffc1ca6608, v3d=0x7fffc1cbca08, viewport=0x7fffad81c088, evil_C=0x7fffe5400be8)
    at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager.c:1733
#11 0x00000000017663b0 in DRW_draw_view (C=0x7fffe5400be8)
    at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager.c:1636
#12 0x00000000030a6379 in view3d_draw_view(bContext const*, ARegion*)
    (C=0x7fffe5400be8, region=0x7fffc1ca6608)
    at /media/data/blender_guest/blender_main/source/blender/editors/space_view3d/view3d_draw.cc:1552
#13 0x00000000030a64c0 in view3d_main_region_draw(bContext const*, ARegion*)
    (C=0x7fffe5400be8, region=0x7fffc1ca6608)
--Type <RET> for more, q to quit, c to continue without paging--
   ors/space_view3d/view3d_draw.cc:1586
#14 0x0000000001e4f941 in ED_region_do_draw(bContext*, ARegion*) (C=0x7fffe5400be8, region=0x7fffc1ca6608)
    at /media/data/blender_guest/blender_main/source/blender/editors/screen/area.cc:536
#15 0x0000000001393edc in wm_draw_window_offscreen (C=0x7fffe5400be8, win=0x7fffc1cedc88, stereo=false)
    at /media/data/blender_guest/blender_main/source/blender/windowmanager/intern/wm_draw.c:960
#16 0x0000000001394556 in wm_draw_window (C=0x7fffe5400be8, win=0x7fffc1cedc88) at /media/data/blender_guest/blender_main/source/blender/windowmanager/intern/wm_draw.c:1125
#17 0x0000000001394d91 in wm_draw_update (C=0x7fffe5400be8) at /media/data/blender_guest/blender_main/source/blender/windowmanager/intern/wm_draw.c:1385
#18 0x000000000138ef3c in WM_main (C=0x7fffe5400be8) at /media/data/blender_guest/blender_main/source/blender/windowmanager/intern/wm.c:649
#19 0x00000000007e0b01 in main (argc=1, argv=0x7fffffffdfe8) at /media/data/blender_guest/blender_main/source/creator/creator.c:585

**System Information** Operating system: Linux-6.0.12-76060006-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro RTX 8000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-23 08:55, hash: `b77e6aaa0f49` Worked: commit date: 2023-03-20 07:31, hash: `b5584c1cb5340` **Short description of error** Sculpting on any object that has dyntopo enabled crashes blender instantly. **Exact steps for others to reproduce the error** Add a cube, go to sculpt mode. Enable dyntopo and drag your mouse across the cube. It should crash instantly. Even just pressing F to scale the brush size crashes. Here is my backtrace from a debug build: ``` #0 pbvh_draw_args_init(PBVH*, PBVH_GPU_Args*, PBVHNode*) (pbvh=0x7fffa5c0f408, args=0x7fffffffc0e0, node=0x7fffa5c46008) at /media/data/blender_guest/blender_main/source/blender/blenkernel/intern/pbvh.cc:691 #1 0x0000000000a85a45 in pbvh_update_draw_buffer_cb(void * __restrict__, int, const TaskParallelTLS * __restrict__) (userdata=0x7fffffffc320, n=0) at /media/data/blender_guest/blender_main/source/blender/blenkernel/intern/pbvh.cc:1666 #2 0x000000000d01f4fc in BLI_task_parallel_range(int, int, void*, TaskParallelRangeFunc, TaskParallelSettings const*) (start=0, stop=1, userdata=0x7fffffffc320, func=0xa85982 <pbvh_update_draw_buffer_cb(void * __restrict__, int, const TaskParallelTLS * __restrict__)>, settings=0x7fffffffc360) at /media/data/blender_guest/blender_main/source/blender/blenlib/intern/task_range.cc:128 #3 0x0000000000a85dd8 in pbvh_update_draw_buffers(PBVH*, PBVHNode**, int, int) (pbvh=0x7fffa5c0f408, nodes=0x7fffae11ab08, totnode=1, update_flag=528) at /media/data/blender_guest/blender_main/source/blender/blenkernel/intern/pbvh.cc:1736 #4 0x0000000000a8a3ec in BKE_pbvh_draw_cb(PBVH*, bool, PBVHFrustumPlanes*, PBVHFrustumPlanes*, void (*)(void*, PBVHBatches*, PBVH_GPU_Args*), void*, bool, PBVHAttrReq*, int) (pbvh=0x7fffa5c0f408, update_only_visible=false, update_frustum=0x7fffffffc710, draw_frustum=0x7fffffff c720, draw_fn=0x176e8fa <sculpt_draw_cb(DRWSculptCallbackData*, PBVHBatches*, PBVH_GPU_Args*)>, user_data=0x7fffffffc860, attrs=0x7fffffffcd70, attrs_num=2) at /media/data/blender_guest/blender_main/source/blender/blenkernel/intern/pbvh.cc:3154 #5 0x000000000176f04f in drw_sculpt_generate_calls(DRWSculptCallbackData*) (scd=0x7fffffffc860) at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager_data.cc:1356 #6 0x000000000176f98b in DRW_shgroup_call_sculpt_with_materials(DRWShadingGroup**, GPUMaterial**, int, Object*) (shgroups=0x7fffffffd260, gpumats=0x0, num_shgroups=1, ob=0x7fffae144e08) at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager_data.cc:1512 #7 0x000000000182590c in workbench_cache_sculpt_populate (wpd=0x7fffad863408, ob=0x7fffae144e08, color_type=V3D_SHADING_MATERIAL_COLOR) at /media/data/blender_guest/blender_main/source/blender/draw/engines/workbench/workbench_engine.c:119 #8 0x0000000001826872 in workbench_cache_populate (ved=0x7fffaf37ea68, ob=0x7fffae144e08) at /media/data/blender_guest/blender_main/source/blender/draw/engines/workbench/workbench_engine.c:428 #9 0x0000000001764c77 in drw_engines_cache_populate (ob=0x7fffae144e08) at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager.c:1077 #10 0x0000000001766929 in DRW_draw_render_loop_ex (depsgraph=0x7fffaefd4108, engine_type=0x7fffaeb1b948, region=0x7fffc1ca6608, v3d=0x7fffc1cbca08, viewport=0x7fffad81c088, evil_C=0x7fffe5400be8) at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager.c:1733 #11 0x00000000017663b0 in DRW_draw_view (C=0x7fffe5400be8) at /media/data/blender_guest/blender_main/source/blender/draw/intern/draw_manager.c:1636 #12 0x00000000030a6379 in view3d_draw_view(bContext const*, ARegion*) (C=0x7fffe5400be8, region=0x7fffc1ca6608) at /media/data/blender_guest/blender_main/source/blender/editors/space_view3d/view3d_draw.cc:1552 #13 0x00000000030a64c0 in view3d_main_region_draw(bContext const*, ARegion*) (C=0x7fffe5400be8, region=0x7fffc1ca6608) --Type <RET> for more, q to quit, c to continue without paging-- ors/space_view3d/view3d_draw.cc:1586 #14 0x0000000001e4f941 in ED_region_do_draw(bContext*, ARegion*) (C=0x7fffe5400be8, region=0x7fffc1ca6608) at /media/data/blender_guest/blender_main/source/blender/editors/screen/area.cc:536 #15 0x0000000001393edc in wm_draw_window_offscreen (C=0x7fffe5400be8, win=0x7fffc1cedc88, stereo=false) at /media/data/blender_guest/blender_main/source/blender/windowmanager/intern/wm_draw.c:960 #16 0x0000000001394556 in wm_draw_window (C=0x7fffe5400be8, win=0x7fffc1cedc88) at /media/data/blender_guest/blender_main/source/blender/windowmanager/intern/wm_draw.c:1125 #17 0x0000000001394d91 in wm_draw_update (C=0x7fffe5400be8) at /media/data/blender_guest/blender_main/source/blender/windowmanager/intern/wm_draw.c:1385 #18 0x000000000138ef3c in WM_main (C=0x7fffe5400be8) at /media/data/blender_guest/blender_main/source/blender/windowmanager/intern/wm.c:649 #19 0x00000000007e0b01 in main (argc=1, argv=0x7fffffffdfe8) at /media/data/blender_guest/blender_main/source/creator/creator.c:585 ```
Andy Goralczyk added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-23 11:53:20 +01:00
Iliya Katushenock added the
Interest
Sculpt, Paint & Texture
label 2023-03-23 12:13:42 +01:00
Iliya Katushenock changed title from Sculpt mode: Sculpting with dyntopo crashes blender to Regression: Sculpt mode: Sculpting with dyntopo crashes blender 2023-03-23 12:18:18 +01:00
Author
Member

I dont know if it helps, but I've managed to bisect it down to this pull request by @HooglyBoogly which got merged 3 days ago.

I dont know if it helps, but I've managed to bisect it down to [this pull request](https://projects.blender.org/blender/blender/pulls/104424) by @HooglyBoogly which got merged 3 days ago.
Hans Goudey was assigned by Sebastian Parborg 2023-03-23 13:16:15 +01:00
Member

Thanks. I'm away this morning but I'll fix this as soon as I'm back.

Thanks. I'm away this morning but I'll fix this as soon as I'm back.
Brecht Van Lommel added this to the 3.6 LTS milestone 2023-03-23 15:10:58 +01:00
Member

I can't test it right now, but this is probably the fix, if anyone wants to test & commit while I'm out:

diff --git a/source/blender/blenkernel/intern/pbvh.cc b/source/blender/blenkernel/intern/pbvh.cc
index 29a34c291ba..747315ade44 100644
--- a/source/blender/blenkernel/intern/pbvh.cc
+++ b/source/blender/blenkernel/intern/pbvh.cc
@@ -688,7 +688,9 @@ static void pbvh_draw_args_init(PBVH *pbvh, PBVH_GPU_Args *args, PBVHNode *node)
   args->face_sets_color_default = pbvh->face_sets_color_default;
   args->face_sets_color_seed = pbvh->face_sets_color_seed;
   args->vert_positions = pbvh->vert_positions;
-  args->corner_verts = {pbvh->corner_verts, pbvh->mesh->totloop};
+  if (pbvh->mesh) {
+    args->corner_verts = {pbvh->corner_verts, pbvh->mesh->totloop};
+  }
   args->corner_edges = pbvh->mesh ? pbvh->mesh->corner_edges() : blender::Span<int>();
   args->polys = pbvh->polys;
   args->mlooptri = pbvh->looptri;
I can't test it right now, but this is probably the fix, if anyone wants to test & commit while I'm out: ```diff diff --git a/source/blender/blenkernel/intern/pbvh.cc b/source/blender/blenkernel/intern/pbvh.cc index 29a34c291ba..747315ade44 100644 --- a/source/blender/blenkernel/intern/pbvh.cc +++ b/source/blender/blenkernel/intern/pbvh.cc @@ -688,7 +688,9 @@ static void pbvh_draw_args_init(PBVH *pbvh, PBVH_GPU_Args *args, PBVHNode *node) args->face_sets_color_default = pbvh->face_sets_color_default; args->face_sets_color_seed = pbvh->face_sets_color_seed; args->vert_positions = pbvh->vert_positions; - args->corner_verts = {pbvh->corner_verts, pbvh->mesh->totloop}; + if (pbvh->mesh) { + args->corner_verts = {pbvh->corner_verts, pbvh->mesh->totloop}; + } args->corner_edges = pbvh->mesh ? pbvh->mesh->corner_edges() : blender::Span<int>(); args->polys = pbvh->polys; args->mlooptri = pbvh->looptri; ```
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-24 02:58:06 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-03-24 02:58:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106029
No description provided.