Fix #106029: Crash sculpting with dynamic topology

The pbvh->mesh pointer isn't set when dyntopo is enabled.